--- a/etl.ipynb
+++ b/etl.ipynb
@@ -31,35 +31,60 @@
    "metadata": {
     "editable": true
    },
+   "outputs": [],
+   "source": [
+    "# Importing all the functions form create tables\n",
+    "from create_tables import *\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<cursor object at 0x7f06604b4618; closed: 0>,\n",
-       " <connection object at 0x7f065fb5d3d8; dsn: 'user=student password=xxx dbname=sparkifydb host=127.0.0.1', closed: 0>)"
+       "(<cursor object at 0x7f4ca8732618; closed: 0>,\n",
+       " <connection object at 0x7f4ca7ddd3d8; dsn: 'user=student password=xxx dbname=sparkifydb host=127.0.0.1', closed: 0>)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from create_tables import create_database\n",
-    "\n",
-    "create_database()"
+    "# Create the required data base sparkify\n",
+    "create_database()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
     "conn = psycopg2.connect(\"host=127.0.0.1 dbname=sparkifydb user=student password=student\")\n",
-    "cur = conn.cursor()"
+    "cur = conn.cursor()\n",
+    "conn.set_session(autocommit=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create all the necessary tables in sparkify\n",
+    "create_tables(cur,conn)"
    ]
   },
   {
@@ -97,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -108,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
@@ -119,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "editable": true
    },
@@ -183,7 +208,7 @@
        "0  Marc Shaiman  149.86404          1  SOINLJW12A8C13314C  City Slickers  2008  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,13 +234,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SOINLJW12A8C13314C', 'City Slickers', 'AR8IEZO1187B99055E', 2008, 149.86404]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "song_data = \n",
+    "song_data = df[['song_id','title','artist_id','year','duration']].values[0].tolist()\n",
     "song_data"
    ]
   },
@@ -231,12 +267,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
+    "\n",
     "cur.execute(song_table_insert, song_data)\n",
     "conn.commit()"
    ]
@@ -266,13 +303,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AR8IEZO1187B99055E', 'Marc Shaiman', '', nan, nan]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "artist_data = \n",
+    "artist_data = df[['artist_id','artist_name','artist_location','artist_latitude','artist_longitude']].values[0].tolist()\n",
     "artist_data"
    ]
   },
@@ -288,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "editable": true
    },
@@ -324,13 +372,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "log_files = "
+    "log_files = get_files(os.path.join(os.getcwd(),\"data/log_data/\"))"
    ]
   },
   {
