--- a/etl.ipynb
+++ b/etl.ipynb
@@ -33,43 +33,6 @@
    },
    "outputs": [],
    "source": [
-    "# Importing all the functions form create tables\n",
-    "from create_tables import *\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(<cursor object at 0x7fc4dc7e5618; closed: 0>,\n",
-       " <connection object at 0x7fc4dbe8f3d8; dsn: 'user=student password=xxx dbname=sparkifydb host=127.0.0.1', closed: 0>)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Create the required data base sparkify\n",
-    "create_database()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
     "conn = psycopg2.connect(\"host=127.0.0.1 dbname=sparkifydb user=student password=student\")\n",
     "cur = conn.cursor()\n",
     "conn.set_session(autocommit=True)"
@@ -77,19 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# Create all the necessary tables in sparkify\n",
-    "create_tables(cur,conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "editable": true
    },
@@ -122,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "editable": true
    },
@@ -133,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "editable": true
    },
@@ -144,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -208,7 +159,7 @@
        "0  Marc Shaiman  149.86404          1  SOINLJW12A8C13314C  City Slickers  2008  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -245,7 +196,7 @@
        "['SOINLJW12A8C13314C', 'City Slickers', 'AR8IEZO1187B99055E', 2008, 149.86404]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
@@ -303,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "editable": true
    },
@@ -314,7 +265,7 @@
        "['AR8IEZO1187B99055E', 'Marc Shaiman', '', nan, nan]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "editable": true
    },
@@ -372,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "editable": true
    },
@@ -383,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "editable": true
    },
@@ -394,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "editable": true
    },
@@ -587,7 +538,7 @@
        "4     24  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "editable": true
    },
@@ -652,17 +603,14 @@
        "      <th>level</th>\n",
        "      <th>location</th>\n",
        "      <th>method</th>\n",
-       "      <th>...</th>\n",
+       "      <th>page</th>\n",
+       "      <th>registration</th>\n",
+       "      <th>sessionId</th>\n",
+       "      <th>song</th>\n",
+       "      <th>status</th>\n",
        "      <th>ts</th>\n",
        "      <th>userAgent</th>\n",
        "      <th>userId</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>hour</th>\n",
-       "      <th>day</th>\n",
-       "      <th>weekofyear</th>\n",
-       "      <th>month</th>\n",
-       "      <th>year</th>\n",
-       "      <th>weekday</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -678,17 +626,14 @@
        "      <td>paid</td>\n",
        "      <td>Tampa-St. Petersburg-Clearwater, FL</td>\n",
        "      <td>PUT</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2018-11-29 00:00:57.796</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1.540558e+12</td>\n",
+       "      <td>954</td>\n",
+       "      <td>Ain't No Sunshine</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1543449657796</td>\n",
        "      <td>\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...</td>\n",
        "      <td>73</td>\n",
-       "      <td>00:00:57.796000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>29</td>\n",
-       "      <td>48</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -702,17 +647,14 @@
        "      <td>paid</td>\n",
        "      <td>Lake Havasu City-Kingman, AZ</td>\n",
        "      <td>PUT</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2018-11-29 00:01:30.796</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1.541057e+12</td>\n",
+       "      <td>984</td>\n",
+       "      <td>My Advice 2 You (Explicit)</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1543449690796</td>\n",
        "      <td>\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...</td>\n",
        "      <td>24</td>\n",
-       "      <td>00:01:30.796000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>29</td>\n",
-       "      <td>48</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -726,17 +668,14 @@
        "      <td>paid</td>\n",
        "      <td>Lake Havasu City-Kingman, AZ</td>\n",
        "      <td>PUT</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2018-11-29 00:04:01.796</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1.541057e+12</td>\n",
+       "      <td>984</td>\n",
+       "      <td>My First Kiss (Feat. Ke$ha) [Album Version]</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1543449841796</td>\n",
        "      <td>\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...</td>\n",
        "      <td>24</td>\n",
-       "      <td>00:04:01.796000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>29</td>\n",
-       "      <td>48</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -750,17 +689,14 @@
        "      <td>paid</td>\n",
        "      <td>Tampa-St. Petersburg-Clearwater, FL</td>\n",
        "      <td>PUT</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2018-11-29 00:04:55.796</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1.540558e+12</td>\n",
+       "      <td>954</td>\n",
+       "      <td>The Girl and The Robot</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1543449895796</td>\n",
        "      <td>\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...</td>\n",
        "      <td>73</td>\n",
-       "      <td>00:04:55.796000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>29</td>\n",
-       "      <td>48</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -774,21 +710,17 @@
        "      <td>paid</td>\n",
        "      <td>Lake Havasu City-Kingman, AZ</td>\n",
        "      <td>PUT</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2018-11-29 00:07:13.796</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1.541057e+12</td>\n",
+       "      <td>984</td>\n",
+       "      <td>Too Shy</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1543450033796</td>\n",
        "      <td>\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...</td>\n",
        "      <td>24</td>\n",
-       "      <td>00:07:13.796000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>29</td>\n",
-       "      <td>48</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -799,75 +731,72 @@
        "3        RÃÂ¶yksopp  Logged In     Jacob      M             54    Klein   \n",
        "4         Kajagoogoo  Logged In     Layla      F             90  Griffin   \n",
        "\n",
-       "      length level                             location method   ...     \\\n",
-       "0  238.07955  paid  Tampa-St. Petersburg-Clearwater, FL    PUT   ...      \n",
-       "1  151.92771  paid         Lake Havasu City-Kingman, AZ    PUT   ...      \n",
-       "2  192.52200  paid         Lake Havasu City-Kingman, AZ    PUT   ...      \n",
-       "3  369.81506  paid  Tampa-St. Petersburg-Clearwater, FL    PUT   ...      \n",
-       "4  223.55546  paid         Lake Havasu City-Kingman, AZ    PUT   ...      \n",
+       "      length level                             location method      page  \\\n",
+       "0  238.07955  paid  Tampa-St. Petersburg-Clearwater, FL    PUT  NextSong   \n",
+       "1  151.92771  paid         Lake Havasu City-Kingman, AZ    PUT  NextSong   \n",
+       "2  192.52200  paid         Lake Havasu City-Kingman, AZ    PUT  NextSong   \n",
+       "3  369.81506  paid  Tampa-St. Petersburg-Clearwater, FL    PUT  NextSong   \n",
+       "4  223.55546  paid         Lake Havasu City-Kingman, AZ    PUT  NextSong   \n",
        "\n",
-       "                       ts                                          userAgent  \\\n",
-       "0 2018-11-29 00:00:57.796  \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...   \n",
-       "1 2018-11-29 00:01:30.796  \"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...   \n",
-       "2 2018-11-29 00:04:01.796  \"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...   \n",
-       "3 2018-11-29 00:04:55.796  \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...   \n",
-       "4 2018-11-29 00:07:13.796  \"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...   \n",
+       "   registration  sessionId                                         song  \\\n",
+       "0  1.540558e+12        954                            Ain't No Sunshine   \n",
+       "1  1.541057e+12        984                   My Advice 2 You (Explicit)   \n",
+       "2  1.541057e+12        984  My First Kiss (Feat. Ke$ha) [Album Version]   \n",
+       "3  1.540558e+12        954                       The Girl and The Robot   \n",
+       "4  1.541057e+12        984                                      Too Shy   \n",
        "\n",
-       "   userId        timestamp  hour day weekofyear month  year  weekday  \n",
-       "0      73  00:00:57.796000     0  29         48    11  2018        3  \n",
-       "1      24  00:01:30.796000     0  29         48    11  2018        3  \n",
-       "2      24  00:04:01.796000     0  29         48    11  2018        3  \n",
-       "3      73  00:04:55.796000     0  29         48    11  2018        3  \n",
-       "4      24  00:07:13.796000     0  29         48    11  2018        3  \n",
+       "   status             ts                                          userAgent  \\\n",
+       "0     200  1543449657796  \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...   \n",
+       "1     200  1543449690796  \"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...   \n",
+       "2     200  1543449841796  \"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...   \n",
+       "3     200  1543449895796  \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...   \n",
+       "4     200  1543450033796  \"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...   \n",
        "\n",
-       "[5 rows x 25 columns]"
+       "  userId  \n",
+       "0     73  \n",
+       "1     24  \n",
+       "2     24  \n",
+       "3     73  \n",
+       "4     24  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = df[df['page']=='NextSong']\n",
-    "df['ts'] = pd.to_datetime(df['ts'], unit='ms')\n",
-    "df['timestamp'] = df['ts'].dt.time\n",
-    "df['hour'] = df['ts'].dt.hour\n",
-    "df['day'] = df['ts'].dt.day\n",
-    "df['weekofyear'] = df['ts'].dt.week\n",
-    "df['month'] = df['ts'].dt.month\n",
-    "df['year'] = df['ts'].dt.year\n",
-    "df['weekday'] = df['ts'].dt.weekday\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# t = \n",
-    "# t.head()"
+    "t = pd.to_datetime(df['ts'], unit='ms')\n",
+    "df['ts'] = pd.to_datetime(df['ts'], unit='ms')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# time_data = ()\n",
-    "# column_labels = ()"
+    "time_data = list((t, t.dt.hour, t.dt.day, t.dt.weekofyear, t.dt.month, t.dt.year, t.dt.weekday))\n",
+    "column_labels = list(('start_time', 'hour', 'day', 'week', 'month', 'year', 'weekday'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "editable": true
    },
@@ -893,10 +822,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>timestamp</th>\n",
+       "      <th>start_time</th>\n",
        "      <th>hour</th>\n",
        "      <th>day</th>\n",
-       "      <th>weekofyear</th>\n",
+       "      <th>week</th>\n",
        "      <th>month</th>\n",
        "      <th>year</th>\n",
        "      <th>weekday</th>\n",
@@ -905,7 +834,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>00:00:57.796000</td>\n",
+       "      <td>2018-11-29 00:00:57.796</td>\n",
        "      <td>0</td>\n",
        "      <td>29</td>\n",
        "      <td>48</td>\n",
@@ -915,7 +844,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>00:01:30.796000</td>\n",
+       "      <td>2018-11-29 00:01:30.796</td>\n",
        "      <td>0</td>\n",
        "      <td>29</td>\n",
        "      <td>48</td>\n",
@@ -925,7 +854,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>00:04:01.796000</td>\n",
+       "      <td>2018-11-29 00:04:01.796</td>\n",
        "      <td>0</td>\n",
        "      <td>29</td>\n",
        "      <td>48</td>\n",
@@ -935,7 +864,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>00:04:55.796000</td>\n",
+       "      <td>2018-11-29 00:04:55.796</td>\n",
        "      <td>0</td>\n",
        "      <td>29</td>\n",
        "      <td>48</td>\n",
@@ -945,7 +874,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>00:07:13.796000</td>\n",
+       "      <td>2018-11-29 00:07:13.796</td>\n",
        "      <td>0</td>\n",
        "      <td>29</td>\n",
        "      <td>48</td>\n",
@@ -958,44 +887,22 @@
        "</div>"
       ],
       "text/plain": [
-       "         timestamp  hour  day  weekofyear  month  year  weekday\n",
-       "0  00:00:57.796000     0   29          48     11  2018        3\n",
-       "1  00:01:30.796000     0   29          48     11  2018        3\n",
-       "2  00:04:01.796000     0   29          48     11  2018        3\n",
-       "3  00:04:55.796000     0   29          48     11  2018        3\n",
-       "4  00:07:13.796000     0   29          48     11  2018        3"
+       "               start_time  hour  day  week  month  year  weekday\n",
+       "0 2018-11-29 00:00:57.796     0   29    48     11  2018        3\n",
+       "1 2018-11-29 00:01:30.796     0   29    48     11  2018        3\n",
+       "2 2018-11-29 00:04:01.796     0   29    48     11  2018        3\n",
+       "3 2018-11-29 00:04:55.796     0   29    48     11  2018        3\n",
+       "4 2018-11-29 00:07:13.796     0   29    48     11  2018        3"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "time_df = df[['timestamp', 'hour', 'day', 'weekofyear', 'month', 'year', 'weekday']]\n",
+    "time_df =  pd.DataFrame.from_dict(dict(zip(column_labels, time_data)))\n",
     "time_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(time_df)"
    ]
   },
   {
@@ -1010,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "editable": true
    },
@@ -1043,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "editable": true
    },
@@ -1064,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {
     "editable": true
    },
@@ -1102,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "editable": true
    },
@@ -1120,7 +1027,7 @@
     "        songid, artistid = None, None\n",
     "\n",
     "    # insert songplay record\n",
-    "    songplay_data = ()\n",
+    "    songplay_data = (index, row.ts, row.userId, row.level, songid, artistid, row.sessionId,row.location, row.userAgent)\n",
     "    cur.execute(songplay_table_insert, songplay_data)\n",
     "    conn.commit()"
    ]
@@ -1145,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "editable": true
    },
