--- a/test.ipynb
+++ b/test.ipynb
@@ -2,27 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "editable": true
    },
@@ -33,13 +24,197 @@
        "'Connected: student@sparkifydb'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%sql postgresql://student:student@127.0.0.1/sparkifydb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>songplay_id</th>\n",
+       "        <th>start_time</th>\n",
+       "        <th>user_id</th>\n",
+       "        <th>level</th>\n",
+       "        <th>song_id</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>session_id</th>\n",
+       "        <th>location</th>\n",
+       "        <th>user_agent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>0</td>\n",
+       "        <td>2018-11-29 00:00:57.796000</td>\n",
+       "        <td>73</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>954</td>\n",
+       "        <td>Tampa-St. Petersburg-Clearwater, FL</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>2018-11-29 00:01:30.796000</td>\n",
+       "        <td>24</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>984</td>\n",
+       "        <td>Lake Havasu City-Kingman, AZ</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>2018-11-29 00:04:01.796000</td>\n",
+       "        <td>24</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>984</td>\n",
+       "        <td>Lake Havasu City-Kingman, AZ</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>2018-11-29 00:04:55.796000</td>\n",
+       "        <td>73</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>954</td>\n",
+       "        <td>Tampa-St. Petersburg-Clearwater, FL</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>2018-11-29 00:07:13.796000</td>\n",
+       "        <td>24</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>984</td>\n",
+       "        <td>Lake Havasu City-Kingman, AZ</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(0, datetime.datetime(2018, 11, 29, 0, 0, 57, 796000), 73, 'paid', None, None, 954, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
+       " (1, datetime.datetime(2018, 11, 29, 0, 1, 30, 796000), 24, 'paid', None, None, 984, 'Lake Havasu City-Kingman, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"'),\n",
+       " (2, datetime.datetime(2018, 11, 29, 0, 4, 1, 796000), 24, 'paid', None, None, 984, 'Lake Havasu City-Kingman, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"'),\n",
+       " (3, datetime.datetime(2018, 11, 29, 0, 4, 55, 796000), 73, 'paid', None, None, 954, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
+       " (4, datetime.datetime(2018, 11, 29, 0, 7, 13, 796000), 24, 'paid', None, None, 984, 'Lake Havasu City-Kingman, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT * FROM tb_songplay LIMIT 5;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>userid</th>\n",
+       "        <th>firstname</th>\n",
+       "        <th>lastname</th>\n",
+       "        <th>gender</th>\n",
+       "        <th>level</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>73</td>\n",
+       "        <td>Jacob</td>\n",
+       "        <td>Klein</td>\n",
+       "        <td>M</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>24</td>\n",
+       "        <td>Layla</td>\n",
+       "        <td>Griffin</td>\n",
+       "        <td>F</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>24</td>\n",
+       "        <td>Layla</td>\n",
+       "        <td>Griffin</td>\n",
+       "        <td>F</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>73</td>\n",
+       "        <td>Jacob</td>\n",
+       "        <td>Klein</td>\n",
+       "        <td>M</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>24</td>\n",
+       "        <td>Layla</td>\n",
+       "        <td>Griffin</td>\n",
+       "        <td>F</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('73', 'Jacob', 'Klein', 'M', 'paid'),\n",
+       " ('24', 'Layla', 'Griffin', 'F', 'paid'),\n",
+       " ('24', 'Layla', 'Griffin', 'F', 'paid'),\n",
+       " ('73', 'Jacob', 'Klein', 'M', 'paid'),\n",
+       " ('24', 'Layla', 'Griffin', 'F', 'paid')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT * FROM tb_user LIMIT 5;"
    ]
   },
   {
@@ -54,15 +229,88 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "(psycopg2.ProgrammingError) relation \"songplays\" does not exist\n",
-      "LINE 1: SELECT * FROM songplays LIMIT 5;\n",
-      "                      ^\n",
-      " [SQL: 'SELECT * FROM songplays LIMIT 5;']\n"
+      "1 rows affected.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>song_id</th>\n",
+       "        <th>title</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>year</th>\n",
+       "        <th>duration</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOINLJW12A8C13314C</td>\n",
+       "        <td>City Slickers</td>\n",
+       "        <td>AR8IEZO1187B99055E</td>\n",
+       "        <td>2008</td>\n",
+       "        <td>149.86404</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('SOINLJW12A8C13314C', 'City Slickers', 'AR8IEZO1187B99055E', 2008, 149.86404)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT * FROM songplays LIMIT 5;"
+    "%sql SELECT * FROM tb_song LIMIT 5;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>artist_name</th>\n",
+       "        <th>artist_location</th>\n",
+       "        <th>artist_latitude</th>\n",
+       "        <th>artist_longitude</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR8IEZO1187B99055E</td>\n",
+       "        <td>Marc Shaiman</td>\n",
+       "        <td></td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('AR8IEZO1187B99055E', 'Marc Shaiman', '', 'NaN', 'NaN')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT * FROM tb_artist LIMIT 5;"
    ]
   },
   {
@@ -73,40 +321,148 @@
    },
    "outputs": [],
    "source": [
-    "%sql SELECT * FROM users LIMIT 5;"
+    " song title, artist name, and song duration time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>song_id</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>title</th>\n",
+       "        <th>duration</th>\n",
+       "        <th>artist_name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOINLJW12A8C13314C</td>\n",
+       "        <td>AR8IEZO1187B99055E</td>\n",
+       "        <td>City Slickers</td>\n",
+       "        <td>149.86404</td>\n",
+       "        <td>Marc Shaiman</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('SOINLJW12A8C13314C', 'AR8IEZO1187B99055E', 'City Slickers', 149.86404, 'Marc Shaiman')]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%sql SELECT * FROM songs LIMIT 5;"
+    "%sql SELECT s.song_id, s.artist_id, s.title, s.duration, a.artist_name FROM tb_song s LEFT JOIN tb_artist a ON s.artist_id=a.artist_id \\\n",
+    "LIMIT 5;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>timestamp</th>\n",
+       "        <th>hour</th>\n",
+       "        <th>day</th>\n",
+       "        <th>weekofyear</th>\n",
+       "        <th>month</th>\n",
+       "        <th>year</th>\n",
+       "        <th>weekday</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>00:00:57.796000</td>\n",
+       "        <td>0</td>\n",
+       "        <td>29</td>\n",
+       "        <td>48</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>00:01:30.796000</td>\n",
+       "        <td>0</td>\n",
+       "        <td>29</td>\n",
+       "        <td>48</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>00:04:01.796000</td>\n",
+       "        <td>0</td>\n",
+       "        <td>29</td>\n",
+       "        <td>48</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>00:04:55.796000</td>\n",
+       "        <td>0</td>\n",
+       "        <td>29</td>\n",
+       "        <td>48</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>00:07:13.796000</td>\n",
+       "        <td>0</td>\n",
+       "        <td>29</td>\n",
+       "        <td>48</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(datetime.time(0, 0, 57, 796000), 0, 29, 48, 11, 2018, 3),\n",
+       " (datetime.time(0, 1, 30, 796000), 0, 29, 48, 11, 2018, 3),\n",
+       " (datetime.time(0, 4, 1, 796000), 0, 29, 48, 11, 2018, 3),\n",
+       " (datetime.time(0, 4, 55, 796000), 0, 29, 48, 11, 2018, 3),\n",
+       " (datetime.time(0, 7, 13, 796000), 0, 29, 48, 11, 2018, 3)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%sql SELECT * FROM artists LIMIT 5;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "%sql SELECT * FROM time LIMIT 5;"
+    "%sql SELECT * FROM tb_time LIMIT 5;"
    ]
   },
   {
@@ -118,6 +474,15 @@
     "## REMEMBER: Restart this notebook to close connection to `sparkifydb`\n",
     "Each time you run the cells above, remember to restart this notebook to close the connection to your database. Otherwise, you won't be able to run your code in `create_tables.py`, `etl.py`, or `etl.ipynb` files since you can't make multiple connections to the same database (in this case, sparkifydb)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
