--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "editable": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "editable": true
    },
@@ -24,7 +24,7 @@
        "'Connected: student@sparkifydb'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "editable": true
    },
@@ -53,7 +53,6 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>songplay_id</th>\n",
        "        <th>start_time</th>\n",
        "        <th>user_id</th>\n",
        "        <th>level</th>\n",
@@ -64,7 +63,6 @@
        "        <th>user_agent</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>0</td>\n",
        "        <td>2018-11-29 00:00:57.796000</td>\n",
        "        <td>73</td>\n",
        "        <td>paid</td>\n",
@@ -75,7 +73,6 @@
        "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2&quot;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>1</td>\n",
        "        <td>2018-11-29 00:01:30.796000</td>\n",
        "        <td>24</td>\n",
        "        <td>paid</td>\n",
@@ -86,7 +83,6 @@
        "        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36&quot;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>2</td>\n",
        "        <td>2018-11-29 00:04:01.796000</td>\n",
        "        <td>24</td>\n",
        "        <td>paid</td>\n",
@@ -97,7 +93,6 @@
        "        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36&quot;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>3</td>\n",
        "        <td>2018-11-29 00:04:55.796000</td>\n",
        "        <td>73</td>\n",
        "        <td>paid</td>\n",
@@ -108,7 +103,6 @@
        "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2&quot;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>4</td>\n",
        "        <td>2018-11-29 00:07:13.796000</td>\n",
        "        <td>24</td>\n",
        "        <td>paid</td>\n",
@@ -121,14 +115,14 @@
        "</table>"
       ],
       "text/plain": [
-       "[(0, datetime.datetime(2018, 11, 29, 0, 0, 57, 796000), 73, 'paid', None, None, 954, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
-       " (1, datetime.datetime(2018, 11, 29, 0, 1, 30, 796000), 24, 'paid', None, None, 984, 'Lake Havasu City-Kingman, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"'),\n",
-       " (2, datetime.datetime(2018, 11, 29, 0, 4, 1, 796000), 24, 'paid', None, None, 984, 'Lake Havasu City-Kingman, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"'),\n",
-       " (3, datetime.datetime(2018, 11, 29, 0, 4, 55, 796000), 73, 'paid', None, None, 954, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
-       " (4, datetime.datetime(2018, 11, 29, 0, 7, 13, 796000), 24, 'paid', None, None, 984, 'Lake Havasu City-Kingman, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"')]"
+       "[(datetime.datetime(2018, 11, 29, 0, 0, 57, 796000), 73, 'paid', None, None, 954, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
+       " (datetime.datetime(2018, 11, 29, 0, 1, 30, 796000), 24, 'paid', None, None, 984, 'Lake Havasu City-Kingman, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"'),\n",
+       " (datetime.datetime(2018, 11, 29, 0, 4, 1, 796000), 24, 'paid', None, None, 984, 'Lake Havasu City-Kingman, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"'),\n",
+       " (datetime.datetime(2018, 11, 29, 0, 4, 55, 796000), 73, 'paid', None, None, 954, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
+       " (datetime.datetime(2018, 11, 29, 0, 7, 13, 796000), 24, 'paid', None, None, 984, 'Lake Havasu City-Kingman, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +223,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "1 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -250,10 +244,42 @@
        "        <td>2008</td>\n",
        "        <td>149.86404</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOGDBUF12A8C140FAA</td>\n",
+       "        <td>Intro</td>\n",
+       "        <td>AR558FS1187FB45658</td>\n",
+       "        <td>2003</td>\n",
+       "        <td>75.67628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SORRZGD12A6310DBC3</td>\n",
+       "        <td>Harajuku Girls</td>\n",
+       "        <td>ARVBRGZ1187FB4675A</td>\n",
+       "        <td>2004</td>\n",
+       "        <td>290.55955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SONWXQJ12A8C134D94</td>\n",
+       "        <td>The Ballad Of Sleeping Beauty</td>\n",
+       "        <td>ARNF6401187FB57032</td>\n",
+       "        <td>1994</td>\n",
+       "        <td>305.162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOFCHDR12AB01866EF</td>\n",
+       "        <td>Living Hell</td>\n",
+       "        <td>AREVWGE1187B9B890A</td>\n",
+       "        <td>0</td>\n",
+       "        <td>282.43546</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('SOINLJW12A8C13314C', 'City Slickers', 'AR8IEZO1187B99055E', 2008, 149.86404)]"
+       "[('SOINLJW12A8C13314C', 'City Slickers', 'AR8IEZO1187B99055E', 2008, 149.86404),\n",
+       " ('SOGDBUF12A8C140FAA', 'Intro', 'AR558FS1187FB45658', 2003, 75.67628),\n",
+       " ('SORRZGD12A6310DBC3', 'Harajuku Girls', 'ARVBRGZ1187FB4675A', 2004, 290.55955),\n",
+       " ('SONWXQJ12A8C134D94', 'The Ballad Of Sleeping Beauty', 'ARNF6401187FB57032', 1994, 305.162),\n",
+       " ('SOFCHDR12AB01866EF', 'Living Hell', 'AREVWGE1187B9B890A', 0, 282.43546)]"
       ]
      },
      "execution_count": 5,
@@ -277,7 +303,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "1 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -298,10 +324,42 @@
        "        <td>NaN</td>\n",
        "        <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR558FS1187FB45658</td>\n",
+       "        <td>40 Grit</td>\n",
+       "        <td></td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARVBRGZ1187FB4675A</td>\n",
+       "        <td>Gwen Stefani</td>\n",
+       "        <td></td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARNF6401187FB57032</td>\n",
+       "        <td>Sophie B. Hawkins</td>\n",
+       "        <td>New York, NY [Manhattan]</td>\n",
+       "        <td>40.79086</td>\n",
+       "        <td>-73.96644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AREVWGE1187B9B890A</td>\n",
+       "        <td>Bitter End</td>\n",
+       "        <td>Noci (BA)</td>\n",
+       "        <td>-13.442</td>\n",
+       "        <td>-41.9952</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('AR8IEZO1187B99055E', 'Marc Shaiman', '', 'NaN', 'NaN')]"
+       "[('AR8IEZO1187B99055E', 'Marc Shaiman', '', 'NaN', 'NaN'),\n",
+       " ('AR558FS1187FB45658', '40 Grit', '', 'NaN', 'NaN'),\n",
+       " ('ARVBRGZ1187FB4675A', 'Gwen Stefani', '', 'NaN', 'NaN'),\n",
+       " ('ARNF6401187FB57032', 'Sophie B. Hawkins', 'New York, NY [Manhattan]', '40.79086', '-73.96644'),\n",
+       " ('AREVWGE1187B9B890A', 'Bitter End', 'Noci (BA)', '-13.442', '-41.9952')]"
       ]
      },
      "execution_count": 6,
@@ -315,18 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    " song title, artist name, and song duration time."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
@@ -336,7 +383,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "1 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -357,13 +404,45 @@
        "        <td>149.86404</td>\n",
        "        <td>Marc Shaiman</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOGDBUF12A8C140FAA</td>\n",
+       "        <td>AR558FS1187FB45658</td>\n",
+       "        <td>Intro</td>\n",
+       "        <td>75.67628</td>\n",
+       "        <td>40 Grit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SORRZGD12A6310DBC3</td>\n",
+       "        <td>ARVBRGZ1187FB4675A</td>\n",
+       "        <td>Harajuku Girls</td>\n",
+       "        <td>290.55955</td>\n",
+       "        <td>Gwen Stefani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SONWXQJ12A8C134D94</td>\n",
+       "        <td>ARNF6401187FB57032</td>\n",
+       "        <td>The Ballad Of Sleeping Beauty</td>\n",
+       "        <td>305.162</td>\n",
+       "        <td>Sophie B. Hawkins</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOFCHDR12AB01866EF</td>\n",
+       "        <td>AREVWGE1187B9B890A</td>\n",
+       "        <td>Living Hell</td>\n",
+       "        <td>282.43546</td>\n",
+       "        <td>Bitter End</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('SOINLJW12A8C13314C', 'AR8IEZO1187B99055E', 'City Slickers', 149.86404, 'Marc Shaiman')]"
+       "[('SOINLJW12A8C13314C', 'AR8IEZO1187B99055E', 'City Slickers', 149.86404, 'Marc Shaiman'),\n",
+       " ('SOGDBUF12A8C140FAA', 'AR558FS1187FB45658', 'Intro', 75.67628, '40 Grit'),\n",
+       " ('SORRZGD12A6310DBC3', 'ARVBRGZ1187FB4675A', 'Harajuku Girls', 290.55955, 'Gwen Stefani'),\n",
+       " ('SONWXQJ12A8C134D94', 'ARNF6401187FB57032', 'The Ballad Of Sleeping Beauty', 305.162, 'Sophie B. Hawkins'),\n",
+       " ('SOFCHDR12AB01866EF', 'AREVWGE1187B9B890A', 'Living Hell', 282.43546, 'Bitter End')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "editable": true
    },
@@ -393,7 +472,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>timestamp</th>\n",
+       "        <th>start_time</th>\n",
        "        <th>hour</th>\n",
        "        <th>day</th>\n",
        "        <th>weekofyear</th>\n",
@@ -402,7 +481,7 @@
        "        <th>weekday</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>00:00:57.796000</td>\n",
+       "        <td>2018-11-29 00:00:57.796000</td>\n",
        "        <td>0</td>\n",
        "        <td>29</td>\n",
        "        <td>48</td>\n",
@@ -411,7 +490,7 @@
        "        <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>00:01:30.796000</td>\n",
+       "        <td>2018-11-29 00:01:30.796000</td>\n",
        "        <td>0</td>\n",
        "        <td>29</td>\n",
        "        <td>48</td>\n",
@@ -420,7 +499,7 @@
        "        <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>00:04:01.796000</td>\n",
+       "        <td>2018-11-29 00:04:01.796000</td>\n",
        "        <td>0</td>\n",
        "        <td>29</td>\n",
        "        <td>48</td>\n",
@@ -429,7 +508,7 @@
        "        <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>00:04:55.796000</td>\n",
+       "        <td>2018-11-29 00:04:55.796000</td>\n",
        "        <td>0</td>\n",
        "        <td>29</td>\n",
        "        <td>48</td>\n",
@@ -438,7 +517,7 @@
        "        <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>00:07:13.796000</td>\n",
+       "        <td>2018-11-29 00:07:13.796000</td>\n",
        "        <td>0</td>\n",
        "        <td>29</td>\n",
        "        <td>48</td>\n",
@@ -449,14 +528,14 @@
        "</table>"
       ],
       "text/plain": [
-       "[(datetime.time(0, 0, 57, 796000), 0, 29, 48, 11, 2018, 3),\n",
-       " (datetime.time(0, 1, 30, 796000), 0, 29, 48, 11, 2018, 3),\n",
-       " (datetime.time(0, 4, 1, 796000), 0, 29, 48, 11, 2018, 3),\n",
-       " (datetime.time(0, 4, 55, 796000), 0, 29, 48, 11, 2018, 3),\n",
-       " (datetime.time(0, 7, 13, 796000), 0, 29, 48, 11, 2018, 3)]"
+       "[(datetime.datetime(2018, 11, 29, 0, 0, 57, 796000), 0, 29, 48, 11, 2018, 3),\n",
+       " (datetime.datetime(2018, 11, 29, 0, 1, 30, 796000), 0, 29, 48, 11, 2018, 3),\n",
+       " (datetime.datetime(2018, 11, 29, 0, 4, 1, 796000), 0, 29, 48, 11, 2018, 3),\n",
+       " (datetime.datetime(2018, 11, 29, 0, 4, 55, 796000), 0, 29, 48, 11, 2018, 3),\n",
+       " (datetime.datetime(2018, 11, 29, 0, 7, 13, 796000), 0, 29, 48, 11, 2018, 3)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
