--- a/test.ipynb
+++ b/test.ipynb
@@ -158,48 +158,48 @@
        "        <th>level</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>73</td>\n",
-       "        <td>Jacob</td>\n",
-       "        <td>Klein</td>\n",
+       "        <td>101</td>\n",
+       "        <td>Jayden</td>\n",
+       "        <td>Fox</td>\n",
        "        <td>M</td>\n",
-       "        <td>paid</td>\n",
+       "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>24</td>\n",
-       "        <td>Layla</td>\n",
-       "        <td>Griffin</td>\n",
-       "        <td>F</td>\n",
-       "        <td>paid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>24</td>\n",
-       "        <td>Layla</td>\n",
-       "        <td>Griffin</td>\n",
-       "        <td>F</td>\n",
-       "        <td>paid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>73</td>\n",
-       "        <td>Jacob</td>\n",
-       "        <td>Klein</td>\n",
+       "        <td>45</td>\n",
+       "        <td>Dominick</td>\n",
+       "        <td>Norris</td>\n",
        "        <td>M</td>\n",
-       "        <td>paid</td>\n",
+       "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>24</td>\n",
-       "        <td>Layla</td>\n",
-       "        <td>Griffin</td>\n",
+       "        <td>52</td>\n",
+       "        <td>Theodore</td>\n",
+       "        <td>Smith</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>54</td>\n",
+       "        <td>Kaleb</td>\n",
+       "        <td>Cook</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>71</td>\n",
+       "        <td>Ayleen</td>\n",
+       "        <td>Wise</td>\n",
        "        <td>F</td>\n",
-       "        <td>paid</td>\n",
+       "        <td>free</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('73', 'Jacob', 'Klein', 'M', 'paid'),\n",
-       " ('24', 'Layla', 'Griffin', 'F', 'paid'),\n",
-       " ('24', 'Layla', 'Griffin', 'F', 'paid'),\n",
-       " ('73', 'Jacob', 'Klein', 'M', 'paid'),\n",
-       " ('24', 'Layla', 'Griffin', 'F', 'paid')]"
+       "[('101', 'Jayden', 'Fox', 'M', 'free'),\n",
+       " ('45', 'Dominick', 'Norris', 'M', 'free'),\n",
+       " ('52', 'Theodore', 'Smith', 'M', 'free'),\n",
+       " ('54', 'Kaleb', 'Cook', 'M', 'free'),\n",
+       " ('71', 'Ayleen', 'Wise', 'F', 'free')]"
       ]
      },
      "execution_count": 4,
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -442,7 +442,7 @@
        " ('SOFCHDR12AB01866EF', 'AREVWGE1187B9B890A', 'Living Hell', 282.43546, 'Bitter End')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
@@ -535,7 +535,7 @@
        " (datetime.datetime(2018, 11, 29, 0, 7, 13, 796000), 0, 29, 48, 11, 2018, 3)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
